--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Python cache and object files
+__pycache__/
+*.py[cod]
+
+# Sphinx documentation
+/doc/_build
+
+# PyCharm project
+/.idea/workspace.xml
+
+# Temperary generated outputs from scripts
 /temp
