--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -8,36 +8,6 @@ on:
     - cron: '0 15 * * *'
 
 jobs:
-  Variables:
-    name: 💻 Pipeline variables
-    runs-on: ubuntu-24.04
-    outputs:
-      branch: ${{ steps.Variables.outputs.branch }}
-      tag:    ${{ steps.Variables.outputs.tag }}
-    steps:
-      - name: 💻 Compute pipeline variables
-        id: Variables
-        run: |
-          ref="${{ github.ref }}"
-
-          branch=""
-          tag=""
-          if [[ "${{ startsWith(github.ref, 'refs/heads/') }}" == "true" ]]; then
-            branch="${ref:11}"
-          elif [[ "${{ startsWith(github.ref, 'refs/tags/') }}" == "true" ]]; then
-            tag="${ref:10}"
-          elif [[ "${{ startsWith(github.ref, 'refs/pull/') }}" == "true" ]]; then
-            printf "Detected a pull request.\n"
-          else
-            printf "::error title=%s::%s\n" "Variables" "Unsupported Git reference format: '${ref}'."
-            exit 1
-          fi
-
-          tee "${GITHUB_OUTPUT}" <<EOF
-          branch=${branch}
-          tag=${tag}
-          EOF
-
   NVC:
     name: ${{ matrix.icon }}${{ matrix.name }} - NVC
     runs-on: ${{ matrix.image }}
@@ -46,7 +16,7 @@ jobs:
       matrix:
         include:
           - {icon: "🐧",   name: "Ubuntu",  image: "ubuntu-24.04", shell: "bash"}
-          - {icon: "🪟",   name: "Windows", image: "windows-2022", shell: "powershell"}
+##        - {icon: "🪟",   name: "Windows", image: "windows-2022", shell: "powershell"}      # Scripting is Bash-based
           - {icon: "🪟🟨", name: "Windows", image: "windows-2022", shell: "msys2 {0}"}       # Installation in Windows via MSI, but called from UCRT64.
 
     defaults:
@@ -65,8 +35,8 @@ jobs:
         with:
           msystem: ucrt64
           update: true
-          install: git tree
-          pacboy: tcl:p tcllib:p
+#          install: git tree
+#          pacboy: tcl:p tcllib:p
 
       - name: 🐧🛠️ Install tcl and tcllib
         if: matrix.name == 'Ubuntu'
@@ -96,3 +66,23 @@ jobs:
           cd temp
 
           ../scripts/NVC.sh
+
+      - name: '📤 Upload artifact: logs'
+        uses: actions/upload-artifact@v4
+        with:
+          name: junit-${{ matrix.name }}-nvc
+          include-hidden-files: true
+          path: |
+            temp/*.xml
+          if-no-files-found: error
+          retention-days: 1
+
+  PublishTestResults:
+    uses: pyTooling/Actions/.github/workflows/PublishTestResults.yml@r5
+    needs:
+      - NVC
+    with:
+      testsuite-summary-name: "Interfaces"
+      dorny:                  true
+#      codecov:                true
+    secrets: inherit
